# contacts.app

./: .envrc  .gitignore  Cargo.toml  flake.nix  result
assets/: style.css  style.css.map
generate-fake-data/: Cargo.toml
generate-fake-data/src/: main.rs
migrations/: 20240302223149_contacts-table.down.sql  20240302223149_contacts-table.up.sql
src/: assets.rs  main.rs  model.rs  pages.rs  paths.rs  tmpl.rs
src/model/: archiver.rs  contacts.rs  mod.rs
src/model/archiver/: writer.rs
src/model/contacts/: id.rs
src/pages/: contacts.rs
src/pages/contacts/: archive.rs  count.rs  item.rs  new.rs  shared.rs
src/pages/contacts/item/: edit.rs  email.rs
templates/: contact-fields.html  contacts.html  edit-contact.html  layout.html  new-contact.html  view-contact.html
