[package]
name = "contacts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = { version = "0.7.4", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-routing"] }
hypertext = { version = "0.5.0", features = ["axum"] }
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-rustls"]}
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.5.2", features = ["trace", "fs"] }

[profile.dev.package.'*']
opt-level = 3
