workspace = { members = ["generate-fake-data"] }

[package]
name = "contacts"
version = "0.1.0"
edition = "2021"
default-run = "contacts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
askama = { git = "https://github.com/BurNiinTRee/askama", branch = "upstream-blocks", default-features = false, features = ["with-axum"] }
askama_axum = { git = "https://github.com/BurNiinTRee/askama", branch = "upstream-blocks", default-features = false }
axum = { version = "0.7.5", default-features = false, features = ["tokio", "http1", "macros", "query", "form"] }
axum-extra = { version = "0.9.2", default-features = false, features = ["typed-routing"] }
axum-flash = "0.8"
axum-htmx = "0.5.0"
# console-subscriber = { version = "0.2.0", default-features = false, features = ["env-filter"] }
futures = { version = "0.3.30", default-features  = false }
ouroboros = "0.18.4"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
sqlx = { version = "0.7.3", default-features = false, features = ["macros", "postgres", "runtime-tokio-rustls", "uuid", "migrate"]}
thiserror = "1.0.58"
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread", "macros", "process", "tracing"] }
tower-http = { version = "0.5.2", default-features = false, features = ["trace", "fs"] }
tower-service = "0.3.2"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["fmt"] }

[profile.dev.package.'*']
opt-level = 3

