[package]
name = "generate-fake-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
fake = "2.9.2"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
